# youpol-client

./: .gitignore  README.md  pyproject.toml
examples/: models_discovery.py  pandas_analysis.py  quickstart.py
youpol/: __init__.py  client.py  filters.py  models.py  pandas_ext.py  search.py
