[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youpol"
version = "1.0.0"
description = "Python client for the YouPol research database API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
dev = ["pytest>=7.0", "pandas>=1.5"]

[tool.setuptools.packages.find]
include = ["youpol*"]
